--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,9 +192,9 @@ SET(s2wasm_SOURCES
   src/wasm-emscripten.cpp
   src/wasm-linker.cpp
 )
-ADD_EXECUTABLE(eosio-s2wasm
+ADD_EXECUTABLE(myeosio-s2wasm
                ${s2wasm_SOURCES})
-TARGET_LINK_LIBRARIES(eosio-s2wasm passes wasm asmjs ast cfg support)
-SET_PROPERTY(TARGET eosio-s2wasm PROPERTY CXX_STANDARD 11)
-SET_PROPERTY(TARGET eosio-s2wasm PROPERTY CXX_STANDARD_REQUIRED ON)
-INSTALL(TARGETS eosio-s2wasm DESTINATION ${CMAKE_INSTALL_BINDIR})
+TARGET_LINK_LIBRARIES(myeosio-s2wasm passes wasm asmjs ast cfg support)
+SET_PROPERTY(TARGET myeosio-s2wasm PROPERTY CXX_STANDARD 11)
+SET_PROPERTY(TARGET myeosio-s2wasm PROPERTY CXX_STANDARD_REQUIRED ON)
+INSTALL(TARGETS myeosio-s2wasm DESTINATION ${CMAKE_INSTALL_BINDIR})
